package com.krayapp.seatchtests


import androidx.test.core.app.ActivityScenario
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.krayapp.seatchtests.view.search.MainActivity
import com.krayapp.seatchtests.view.search.SearchResultAdapter.SearchResultViewHolder
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class MainActivityRecyclerViewTest {

   private lateinit var scenario: ActivityScenario<MainActivity>

   @Before
   fun setup() {
       scenario = ActivityScenario.launch(MainActivity::class.java)
   }

   @Test
   fun activitySearch_ScrollTo() {
           loadList()

           onView(withId(R.id.recyclerView))
               .perform(
                   RecyclerViewActions.scrollTo<SearchResultViewHolder>(
                       hasDescendant(withText("FullName: 42"))
                   )
               )
   }

   @Test
   fun activitySearch_PerformClickAtPosition() {
           loadList()
           onView(withId(R.id.recyclerView))
               .perform(
                   RecyclerViewActions.actionOnItemAtPosition<SearchResultViewHolder>(
                       0,
                       click()
                   )
               )
   }

   @Test
   fun activitySearch_PerformClickOnItem() {
           loadList()

           onView(withId(R.id.recyclerView))
               .perform(
                   RecyclerViewActions.scrollTo<SearchResultViewHolder>(
                       hasDescendant(withText("FullName: 50"))
                   )
               )

           onView(withId(R.id.recyclerView))
               .perform(
                   RecyclerViewActions.actionOnItem<SearchResultViewHolder>(
                       hasDescendant(withText("FullName: 42")),
                       click()
                   )
               )
   }

   private fun loadList() {
       onView(withId(R.id.searchEditText)).perform(click())
       onView(withId(R.id.searchEditText)).perform(replaceText("algol"), closeSoftKeyboard())
       onView(withId(R.id.searchEditText)).perform(pressImeActionButton())
   }

   @After
   fun close() {
       scenario.close()
   }
}